# Ros_practice

catkin_ws/: file.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py
catkin_ws/devel/lib/beginner_tutorials/: listener  talker
catkin_ws/devel/lib/open_cv_test/: TennisBallListener_cpp  TennisBallTalker_cpp  read_video_test
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  open_cv_test.pc  ros_essentials_cpp.pc  ros_service_assignment.pc  turtle_cleaner.pc
catkin_ws/devel/lib/python3/dist-packages/ros_essentials_cpp/msg/: _FibonacciAction.py  _FibonacciActionFeedback.py  _FibonacciActionGoal.py  _FibonacciActionResult.py  _FibonacciFeedback.py  _FibonacciGoal.py  _FibonacciResult.py  _IoTSensor.py
catkin_ws/devel/lib/ros_essentials_cpp/: add_two_ints_client  add_two_ints_server  image_pub_sub_cpp  iot_pub  iot_sub  listener_node  open_copy_cpp  read_video_cpp  scan_subscriber_cpp  talker_node  turtlesim_clean_node
catkin_ws/devel/lib/ros_service_assignment/: rect_client  rect_server
catkin_ws/devel/lib/turtle_cleaner/: robot_cleaner_node
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/open_cv_test/cmake/: open_cv_testConfig.cmake
catkin_ws/devel/share/ros_essentials_cpp/cmake/: ros_essentials_cpp-msg-extras.cmake  ros_essentials_cpp-msg-paths.cmake  ros_essentials_cppConfig.cmake
catkin_ws/devel/share/ros_service_assignment/cmake/: ros_service_assignment-msg-extras.cmake  ros_service_assignmentConfig.cmake
catkin_ws/devel/share/roseus/ros/beginner_tutorials/: manifest.l
catkin_ws/devel/share/roseus/ros/ros_essentials_cpp/: manifest.l
catkin_ws/devel/share/roseus/ros/ros_service_assignment/: manifest.l
catkin_ws/devel/share/turtle_cleaner/cmake/: turtle_cleanerConfig.cmake
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/open_cv_test/: CMakeLists.txt  package.xml
catkin_ws/src/open_cv_test/launch/: open.launch
catkin_ws/src/open_cv_test/src/: read_video.cpp  tennisBallListener.cpp  tennisBallTalker.cpp
catkin_ws/src/ros_essentials_cpp-master/: CMakeLists.txt  package.xml
catkin_ws/src/ros_essentials_cpp-master/src/assignment/: robot_move_topics.py
catkin_ws/src/ros_essentials_cpp-master/src/topic01_basics/iot_sensor/: iot_sen_pub.cpp  iot_sen_sub.cpp  iot_sensor_publisher.py  iot_sensor_subscriber.py
catkin_ws/src/ros_essentials_cpp-master/src/topic03_perception/cpp/: image_pub_sub.cpp  open_copy.cpp
catkin_ws/src/ros_service_assignment/: CMakeLists.txt
catkin_ws/src/ros_service_assignment/src/: rect_client.cpp  rect_server.cpp
catkin_ws/src/turtle_cleaner/: CMakeLists.txt  package.xml
catkin_ws/src/turtle_cleaner/launch/: turtlesim_teleop.launch
catkin_ws/src/turtle_cleaner/src/: robot_cleaner.cpp
(+4 files in other folders)
